<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="@drawable/background" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textSize="25sp" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:text="@string/new_game_label" />

    <Button
        android:id="@+id/continue_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:text="@string/continue_game_label" />
    
    <Button
        android:id="@+id/create_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:text="@string/create_game_label" />
    
    <Button
        android:id="@+id/savedpuzzle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:text="@string/savedpuzzle_label" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:text="@string/about_label" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomButton"
        android:text="@string/exit_label" />

</LinearLayout>